[workspace]
resolver = "2"
members = [
  "bevy_ray_tracing"
, "examples/cornell_box", "examples/shared"]

[workspace.dependencies]
bevy = "0.13.2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
